--- a/Morning_Session/D3_PyBasics,Iterations.ipynb
+++ b/Morning_Session/D3_PyBasics,Iterations.ipynb
@@ -1240,19 +1240,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3215\n"
+     ]
+    }
+   ],
    "source": [
-    "   "
+    "print(3215)   "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    " # Note PAd\n",
+    "hgdfh\n",
+    "djhgf\n",
+    "djhg## 356  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "8\n",
+      "6\n",
+      "4\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "val=10\n",
+    "while(val>=0):\n",
+    "    if(val%2==0):\n",
+    "        print(val)\n",
+    "    val -= 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1260,9 +1299,11 @@
    "source": [
     "# Task:\n",
     "\n",
-    "* Design Basic Calculator\n",
-    "\n",
-    "USe only 1 operator 2 operands\n"
+    "* Design Basic Calculator using 1 Operator and 2 Operands \n",
+    "* Design Calculator\n",
+    "    - it Retuns Aggregation of all operands when user enters \"=\" operator \n",
+    "   \n",
+    "\n"
    ]
   }
  ],
